--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Agência Digital</title>
+    <title>Buscac | Plataforma de Prestação de Serviços</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Agência Criativa</h1>
+            <h1>Buscac</h1>
             <nav>
                 <ul>
-                    <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="#como-funciona">Como Funciona</a></li>
+                    <li><a href="#contato">Solicitar Orçamento</a></li>
                 </ul>
             </nav>
         </div>
@@ -22,25 +23,77 @@
 
     <section id="hero" class="hero-section">
         <div class="container">
-            <h2>Transformamos Ideias em Resultados Digitais</h2>
-            <p>Especialistas em desenvolvimento de sites e aplicativos modernos.</p>
-            <button id="cta-button">Fale Conosco</button>
+            <h2>Encontre o Profissional Ideal. Rápido e Fácil.</h2>
+            <p>Conectamos você aos melhores prestadores de serviço da sua região.</p>
+            <a href="#servicos" class="cta-button-a">Ver Serviços</a>
         </div>
     </section>
 
     <section id="servicos">
         <div class="container">
-            <h3>Nossos Serviços</h3>
-            <div class="servico-item">Criação de Sites Responsivos</div>
-            <div class="servico-item">Desenvolvimento de Apps Mobile</div>
-            <div class="servico-item">Marketing Digital Estratégico</div>
+            <h3>Nossos Principais Serviços</h3>
+            <div class="servicos-grid">
+                <div class="servico-card">
+                    <i class="fas fa-hammer"></i>
+                    <h4>Reforma e Construção</h4>
+                    <p>Encanadores, eletricistas, pedreiros e mais.</p>
+                </div>
+                <div class="servico-card">
+                    <i class="fas fa-laptop-code"></i>
+                    <h4>Tecnologia e TI</h4>
+                    <p>Manutenção de computadores, webdesigners e suporte técnico.</p>
+                </div>
+                <div class="servico-card">
+                    <i class="fas fa-broom"></i>
+                    <h4>Serviços Domésticos</h4>
+                    <p>Diaristas, babás, jardineiros e limpeza especializada.</p>
+                </div>
+            </div>
         </div>
     </section>
 
-    <footer id="contato">
+    <section id="como-funciona" class="alt-bg">
         <div class="container">
-            <p>&copy; 2024 Agência Criativa. Todos os direitos reservados.</p>
-            <p>Email: contato@agenciacriativa.com</p>
+            <h3>Como Funciona o Buscac</h3>
+            <div class="passos">
+                <div class="passo-item">
+                    <span class="numero">1</span>
+                    <h4>Descreva a Necessidade</h4>
+                    <p>Use nosso formulário para detalhar o serviço que você precisa.</p>
+                </div>
+                <div class="passo-item">
+                    <span class="numero">2</span>
+                    <h4>Receba Orçamentos</h4>
+                    <p>Profissionais qualificados enviarão propostas diretamente a você.</p>
+                </div>
+                <div class="passo-item">
+                    <span class="numero">3</span>
+                    <h4>Escolha e Contrate</h4>
+                    <p>Compare perfis e preços e contrate o melhor para o seu projeto.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contato">
+        <div class="container">
+            <h3>Solicite Seu Orçamento Gratuito</h3>
+            <form action="#" method="POST">
+                <input type="text" name="nome" placeholder="Seu Nome" required>
+                <input type="email" name="email" placeholder="Seu Email" required>
+                <textarea name="servico" placeholder="Descreva o serviço que você precisa..." required></textarea>
+                <button type="submit" class="cta-button-b">Enviar Solicitação</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Buscac. Conectando Clientes e Profissionais.</p>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
         </div>
     </footer>
 
