--- a/index.html
+++ b/index.html
@@ -1,120 +1,57 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscac | Plataforma de Prestação de Serviços</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Cardápio de Cookies</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
-        <div class="container">
-            <h1>Buscac</h1>
-            <nav>
-                <ul>
-                    <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#como-funciona">Como Funciona</a></li>
-                    <li><a href="#contato">Orçamento</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h1>🍪 Nossos Cookies Especiais 🍪</h1>
+        <p>Experimente as nossas delícias! Feitos com ingredientes selecionados.</p>
     </header>
 
-    <section id="hero" class="hero-section">
-        <div class="container">
-            <h2>Olá, o que você gostaria de melhorar hoje?</h2>
-            <input type="text" id="search-bar" placeholder="Pesquisar serviço ou especialidade...">
-            <p>Serviços Populares: Eletricista, Limpeza de Casa, Mecânico.</p>
-            <a href="#servicos" class="cta-button-a" style="margin-top: 20px;">VER TODAS AS CATEGORIAS</a>
+    <section class="menu-grid">
+        
+        <div class="menu-item">
+            <img src="[NOME_DO_ARQUIVO_PISTACHE.jpg]" alt="Cookie de Pistache recheado">
+            <h2>Cookie Pistache</h2>
+            <p class="price">R$19,00</p>
         </div>
+
+        <div class="menu-item">
+            <img src="[NOME_DO_ARQUIVO_REDVELVET.jpg]" alt="Cookie Red Velvet recheado com cream cheese">
+            <h2>Cookie Red Velvet</h2>
+            <p class="price">R$15,50</p>
+        </div>
+
+        <div class="menu-item">
+            <img src="[NOME_DO_ARQUIVO_TRADICIONAL.jpg]" alt="Cookie Tradicional com gotas de chocolate">
+            <h2>Cookie Tradicional</h2>
+            <p class="price">R$14,00</p>
+        </div>
+
+        <div class="menu-item">
+            <img src="[NOME_DO_ARQUIVO_KINDER_BUENO.jpg]" alt="Cookie com cobertura e barra Kinder Bueno">
+            <h2>Cookie Kinder Bueno</h2>
+            <p class="price">R$18,50</p>
+        </div>
+
+        <div class="menu-item">
+            <img src="[NOME_DO_ARQUIVO_MATILDA.jpg]" alt="Cookie Matilda com recheio cremoso de chocolate">
+            <h2>Cookie Matilda</h2>
+            <p class="price">R$16,50</p>
+        </div>
+
+        <div class="menu-item">
+            <img src="[NOME_DO_ARQUIVO_NUTELLA.jpg]" alt="Cookie de Nutella recheado">
+            <h2>Cookie Nutella</h2>
+            <p class="price">R$15,50</p>
+        </div>
+
     </section>
 
-    <section id="servicos">
-        <div class="container">
-            <h3>Nossos Principais Serviços</h3>
-            <div class="servicos-grid">
-                <div class="servico-card">
-                    <i class="fas fa-hammer"></i>
-                    <h4>Construção</h4>
-                </div>
-                <div class="servico-card">
-                    <i class="fas fa-tint"></i>
-                    <h4>Encanador</h4>
-                </div>
-                <div class="servico-card">
-                    <i class="fas fa-bolt"></i>
-                    <h4>Eletricista</h4>
-                </div>
-                <div class="servico-card">
-                    <i class="fas fa-broom"></i>
-                    <h4>Diarista</h4>
-                </div>
-                <div class="servico-card">
-                    <i class="fas fa-utensils"></i>
-                    <h4>Culinária</h4>
-                </div>
-                <div class="servico-card">
-                    <i class="fas fa-car-side"></i>
-                    <h4>Mecânico</h4>
-                </div>
-                <div class="servico-card">
-                    <i class="fas fa-cut"></i>
-                    <h4>Cabeleireiro</h4>
-                </div>
-                <div class="servico-card">
-                    <i class="fas fa-paw"></i>
-                    <h4>Pet Sitter</h4>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="como-funciona" class="alt-bg">
-        <div class="container">
-            <h3>Como Funciona o Buscac</h3>
-            <div class="passos">
-                <div class="passo-item">
-                    <span class="numero">1</span>
-                    <h4>Solicite o Serviço</h4>
-                    <p>Descreva o que precisa no formulário abaixo.</p>
-                </div>
-                <div class="passo-item">
-                    <span class="numero">2</span>
-                    <h4>Receba Propostas</h4>
-                    <p>Profissionais próximos enviam orçamentos.</p>
-                </div>
-                <div class="passo-item">
-                    <span class="numero">3</span>
-                    <h4>Avalie e Contrate</h4>
-                    <p>Compare perfis e feche o melhor negócio.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="contato">
-        <div class="container">
-            <h3>Solicite Seu Orçamento Gratuito</h3>
-            <form action="#" method="POST">
-                <input type="text" name="nome" placeholder="Seu Nome" required>
-                <input type="email" name="email" placeholder="Seu Email" required>
-                <textarea name="servico" placeholder="Descreva o serviço que você precisa e sua localização..." required></textarea>
-                <button type="submit" class="cta-button-b">Enviar Solicitação</button>
-            </form>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Buscac. Conectando Clientes e Profissionais.</p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
